assets/scss/organisms/_text-heading-block.scss
@use '@/assets/scss/abstracts/' as *;

.text-heading-block {
    $b: &;

    &__content {
        --text-font-size: #{fluid( 1.25, 1.625, false)};
        --text-line-height: 1.6;
        --text-inline-size: var(--size-content-4);
        color: var(--section-color-text);
        text-align: justify;

        @include breakpoint( xxl ) {
            --text-inline-size: var(--size-content-3);
        }

        @include breakpoint( xxxl ) {
            --text-inline-size: var(--size-content-2);
        }
    }

    @include breakpoint(lg) {
        &__eyebrow {
            grid-area: EYEBROW;
        }

        &__heading {
            grid-area: HEADING;
        }

        &__content {
            grid-area: CONTENT;
        }

        &:where([section-layout='columns']) {
            grid-template-areas:
                'EYEBROW EYEBROW'
                'HEADING CONTENT';

            #{$b}__content {
                justify-self: end;
            }
        }

        &:where([section-layout='columns'][section-alignment='end']) {
            grid-template-areas:
                'XXXXXXX CONTENT'
                'EYEBROW CONTENT'
                'HEADING CONTENT';
        }

        &:where([section-layout='columns-reverse']) {
            grid-template-areas:
                'EYEBROW EYEBROW'
                'CONTENT HEADING';

            #{$b}__eyebrow {
                justify-self: end;
            }

            #{$b}__heading {
                --text-align: end;
                justify-self: var(--text-align);
                text-align: var(--text-align);
            }

            #{$b}__content {
                justify-self: end;
            }
        }

        &:where([section-layout='columns-reverse'][section-alignment='end']) {
            grid-template-areas:
                'CONTENT XXXXXXX'
                'CONTENT EYEBROW'
                'CONTENT HEADING';

            #{$b}__content {
                justify-self: start;
            }
        }

        &:where([section-alignment='end']) {
            align-items: end;
            align-content: end;
        }
    }
}

